 o pop3: Added support for sasl login authentication 
 o pop3: Added support for sasl ntlm authentication
 o pop3: Added support for sasl cram-md5 authentication
 o pop3: Added support for sasl digest-md5 authentication
 o pop3: Added support for apop authentication
 o Added support for Schannel (Native Windows) SSL/TLS encryption [2]
 o Added support for Darwin SSL (Native Mac OS X and iOS) [6]

This release includes the following bugfixes:

 o pop3: Fixed the issue of having to supply the user name for all requests
 o configure: fix LDAPS disabling related misplaced closing parenthesis
 o cmdline: made -D option work with -O and -J
 o configure: Fix libcurl.pc and curl-config generation for static MingW*
   cross builds
 o ssl: fix duplicated SSL handshake with multi interface and proxy [1]
 o winbuild: Fix Makefile.vc ignoring USE_IPV6 and USE_IDN flags
 o OpenSSL: support longer certificate subject names [3]
 o openldap: OOM fixes
 o log2changes.pl: fix the Version output
 o lib554.c: use curl_formadd() properly [4]
 o urldata.h: fix cyassl build clash with wincrypt.h
 o cookies: changed the URL in the cookiejar headers [7]
 o http-proxy: keep CONNECT connections alive (for NTLM)
 o NTLM SSPI: fixed to work with unicode user names and passwords
 o OOM fix in the curl tool when cloning cmdline options
 o fixed some examples to use curl_global_init() properly
 o cmdline: stricter numerical option parser
 o HTTP HEAD: don't force-close after response-headers
 o test231: fix wrong -C use
 o docs: switch to proper UTF-8 for text file encoding

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

 Anthony Bryan, Guenter Knauf, Kamil Dudka, Steve Holme, Tatsuhiro Tsujikawa,
 Yang Tse, Gokhan Sengun, Marc Hoersken, Ghennadi Procopciuc, Gisle Vanem,